@@ -1,7 +1,11 @@
 2008-02-15  Carlos Licea  <carlos.licea@kdemail.net>
+    *PlaceMarkPainter.cpp: Fix my previous verbosiness, thanks Jeremy!.
+
+2008-02-15  Carlos Licea  <carlos.licea@kdemail.net>
     Let there be placemarks.
     *PlaceMarkPainter: weird, for some reason OR doesn't work
      in a switch.
+
 2008-02-16  Inge Wallin  <inge@lysator.liu.se>
 
 	Clean up after the last few changes.
